[package]
name = "restate-cluster-controller"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []
options_schema = ["dep:schemars"]

[dependencies]
restate-errors = { workspace = true }
restate-types = { workspace = true }

codederror = { workspace = true }
derive_builder = { workspace = true }
drain = { workspace = true }
futures = { workspace = true }
schemars = { workspace = true, optional = true}
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }