[package]
name = "restate-cluster-controller"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []
options_schema = ["dep:schemars"]

[dependencies]
restate-bifrost = { workspace = true }
restate-core = { workspace = true }
restate-network = { workspace = true }
restate-node-protocol = { workspace = true }
restate-types = { workspace = true }

anyhow = { workspace = true }
arc-swap = { workspace = true }
codederror = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
schemars = { workspace = true, optional = true}
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
restate-bifrost = { workspace = true, features = ["test-util"] }
restate-core = { workspace = true, features = ["test-util"] }

googletest = { workspace = true }
test-log = { workspace = true }
