[package]
name = "codederror"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
restate-workspace-hack = { workspace = true }

codederror-derive = { version = "0.1.0", path = "derive" }

[dev-dependencies]
thiserror = { workspace = true }