[package]
name = "restate-consensus"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
restate-types = { workspace = true }

anyhow = { workspace = true }
futures = { workspace = true }
futures-sink = { workspace = true }
pin-project = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
restate-test-util = { workspace = true }

tracing-subscriber = { workspace = true }

