[package]
name = "restate-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []
test-util = [
  "restate-core-derive",
  "restate-metadata-store/test-util",
  "restate-types/test-util",
  "tokio/test-util"
]

[dependencies]
restate-workspace-hack = { workspace = true }

restate-core-derive = { workspace = true, optional = true }
restate-futures-util = { workspace = true }
restate-types = { workspace = true }
restate-metadata-store = { workspace = true }

ahash = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
assert2 = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, default-features = false }
bytes = { workspace = true }
bytestring = { workspace = true }
dashmap = { workspace = true }
derive_builder = { workspace = true }
derive_more = { workspace = true }
prost-dto = { workspace = true }
enum-map = { workspace = true }
enumset = { workspace = true }
etcd-client = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
humantime = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["server-graceful", "server"] }
itertools = { workspace = true }
metrics = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
static_assertions = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["tracing"] }
tokio-stream = { workspace = true, features = ["net"] }
tokio-util = { workspace = true, features = ["net"] }
tonic = { workspace = true, features = ["transport", "codegen", "prost", "gzip", "zstd"] }
tonic-reflection = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
restate-core = {path = ".", default-features = false, features = ["test-util"]}
restate-core-derive = { workspace = true }
restate-metadata-store = { workspace = true, features = ["test-util"] }
restate-test-util = { workspace = true }

googletest = { workspace = true }
test-log = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_taskdump)'] }
