[package]
name = "restate-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []
test-util = [
  "restate-core-derive",
  "restate-metadata-store/test-util",
  "restate-types/test-util",
  "tokio/test-util"
]
taskdump = ["tokio/taskdump"]

[dependencies]
restate-workspace-hack = { workspace = true }

restate-core-derive = { workspace = true, optional = true }
restate-futures-util = { workspace = true }
restate-memory = { workspace = true }
restate-metadata-store = { workspace = true }
restate-time-util = { workspace = true }
restate-types = { workspace = true }

ahash = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
assert2 = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, default-features = false }
bytes = { workspace = true }
bytestring = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true, features = ["debug", "deref", "display", "from", "index", "index_mut", "into", "is_variant"] }
prost-dto = { workspace = true }
enum-map = { workspace = true }
enumset = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["server-graceful", "server"] }
itertools = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
static_assertions = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["tracing"] }
tokio-stream = { workspace = true, features = ["net"] }
tokio-util = { workspace = true, features = ["net"] }
tonic = { workspace = true, features = ["transport", "codegen", "gzip", "zstd", "router"] }
tonic-prost = { workspace = true }
tonic-reflection = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
restate-core = {path = ".", default-features = false, features = ["test-util"]}
restate-core-derive = { workspace = true }
restate-metadata-store = { workspace = true, features = ["test-util"] }
restate-test-util = { workspace = true }

googletest = { workspace = true }
test-log = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
