[package]
name = "restate-encoding"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
restate-workspace-hack = { workspace = true }

restate-encoding-derive = { version = "0.1.0", path = "derive" }
restate-sharding = { workspace = true }

bilrost = { workspace = true }
bytes = { workspace = true }
bytestring = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
restate-sharding = { workspace = true, features = ["bilrost"] }
static_assertions = { workspace = true }