[package]
name = "restate-fs-util"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []

[dependencies]
restate-workspace-hack = { workspace = true }

tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
uuid = { workspace = true }