[package]
name = "restate-futures-util"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
restate-workspace-hack = { workspace = true }

anyhow = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }
pin-project-lite = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
restate-test-util = { workspace = true }

test-log = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }