[package]
name = "restate-hyper-uds"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []

[dependencies]
restate-workspace-hack = { workspace = true }

http = { workspace = true }
hyper-util = { workspace = true, features = ["tokio"] }
pin-project = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tower = { workspace = true }

