[package]
name = "restate-ingestion-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]

restate-core = { workspace = true }
restate-types = { workspace = true }
restate-workspace-hack = { workspace = true }

bytes = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }
thiserror = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
googletest = { workspace = true }
restate-memory = { workspace = true }
test-log = { workspace = true }

restate-core = { workspace = true, features = ["test-util"] }
