[package]
name = "restate-ingress-dispatcher"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []
mocks = ["dep:restate-test-util"]

[dependencies]
restate-core = { workspace = true }
restate-futures-util = { workspace = true }
restate-pb = { workspace = true, features = ["restate-types"] }
restate-schema-api = { workspace = true, features = ["subscription"] }
restate-test-util = { workspace = true, optional = true }
restate-types = { workspace = true }
restate-wal-protocol = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }
bytestring = { workspace = true }
drain = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }


[dev-dependencies]
restate-core = { workspace = true, features = ["test-util"] }
restate-test-util = { workspace = true, features = ["prost"] }
restate-types = { workspace = true, features = ["mocks"] }

googletest = { workspace = true }
test-log = { workspace = true }
tracing-subscriber = { workspace = true }
