[package]
name = "restate-ingress-grpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []
options_schema = ["dep:schemars"]

[dependencies]
# Restate
restate-errors = { workspace = true }
restate-ingress-dispatcher = { workspace = true }
restate-pb = { workspace = true, features = ["restate-types"] }
restate-schema-api = { workspace = true, features = ["json_conversion", "key_extraction" ,"proto_symbol", "service"]}
restate-types = { workspace = true, features = ["tonic_conversions"] }

# Encoding/Decoding
bytes = { workspace = true }
bytestring = { workspace = true }
prost = { workspace = true }
prost-reflect = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }

# Futures
futures = { workspace = true }
pin-project = { workspace = true }
restate-futures-util = { workspace = true }

# Tower + Hyper + Tonic + Tokio
http = { workspace = true }
http-body = "0.4"
hyper = { workspace = true, features = ["http1", "http2", "server", "tcp", "stream", "runtime"] }
tokio = { workspace = true }
tonic = { workspace = true, features = ["codegen", "prost", "transport"] }
tonic-web = "0.10.2"
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["cors"] }

# Tracing
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Other
anyhow = { workspace = true }
arc-swap = { workspace = true }
codederror = { workspace = true }
derive_builder = { workspace = true }
drain = { workspace = true }
metrics = { workspace = true }
once_cell = { workspace = true }
schemars = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
restate-ingress-dispatcher = { workspace = true, features = ["mocks"] }
restate-pb = { workspace = true, features = ["mocks"] }
restate-schema-impl = { workspace = true }
restate-test-util = { workspace = true }
restate-types = { workspace = true, features = ["mocks"] }

hyper = { workspace = true, features = ["client"] }
test-log = { workspace = true }
tonic = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true }
