[package]
name = "restate-ingress-http"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []
options_schema = ["dep:schemars"]

[dependencies]
# Restate
restate-core = { workspace = true }
restate-errors = { workspace = true }
restate-ingress-dispatcher = { workspace = true }
restate-serde-util = { workspace = true }
restate-tracing-instrumentation = { workspace = true }
restate-types = { workspace = true }
restate-service-protocol = { workspace = true, features = ["awakeable-id"] }

# Encoding/Decoding
bytes = { workspace = true }
bytestring = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }

# Futures
futures = { workspace = true }

# Tokio + Hyper
hyper = { workspace = true, features = ["server"] }
tokio = { workspace = true }
http = { workspace = true }
url = "2.5.0"
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true, features = ["http1", "http2", "server", "tokio", "service"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["cors", "normalize-path"] }

# We need this until we convert everything else to http 1.0/hyper 1.0
# https://github.com/restatedev/restate/issues/96
http-old = { package = "http", version = "0.2.12" }

# Tracing
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Other
anyhow = { workspace = true }
codederror = { workspace = true }
derive_builder = { workspace = true }
metrics = { workspace = true }
schemars = { workspace = true, optional = true }
thiserror = { workspace = true }
urlencoding = "2.1"
pin-project-lite = "0.2.13"
humantime = { workspace = true }

[dev-dependencies]
restate-core = { workspace = true, features = ["test-util"] }
restate-ingress-dispatcher = { workspace = true, features = ["test-util"] }
restate-test-util = { workspace = true }
restate-types = { workspace = true, features = ["test-util"] }

hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }

tracing-test = { workspace = true }
tracing-subscriber = { workspace = true }

googletest = { workspace = true }
