[package]
name = "restate-invoker-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []
test-util = ["restate-types/test-util"]
serde = ["dep:serde"]

[dependencies]
restate-workspace-hack = { workspace = true }

restate-errors = { workspace = true }
restate-futures-util = { workspace = true }
restate-types = { workspace = true }

bytes = { workspace = true }
codederror = { workspace = true }
futures = { workspace = true }
gardal = { workspace = true, features = ["tokio"] }
serde = { workspace = true, optional = true }
tokio = { workspace = true }

[dev-dependencies]
restate-types = { workspace = true, features = ["test-util"] }
